...
  // this determines which page is loaded
  int pageIndex = 0;

  @override
  Widget build(BuildContext context) {
    return SafeArea(
      key: const Key("home_page"),
      child: Scaffold(
        bottomNavigationBar: NavigationBar(
          elevation: 2,
          selectedIndex: pageIndex,
          height: 67,
          onDestinationSelected: (value) => setState(() {
...
              label: 'Events'),
            NavigationDestination(
              icon: Icon(Icons.chat), 
              label: 'Chats'),
            NavigationDestination(
              icon: Icon(Icons.account_circle_outlined), 
              label: 'Profile'),
            NavigationDestination(
              icon: Icon(Icons.settings), 
              label: 'Settings')
        ]),
        body: FutureBuilder<Widget>(
          future: choosePage(pageIndex),
...
                          child: const Text("Cancel"),
                          onPressed: () {
                            Navigator.pop(context);
                          }
                          ),
                        MaterialButton(
                          child: const Text("OK"),
                          onPressed: () {
                            calender.Event event = calender.Event(
                              title: element.name,
                              description: element.description,
                              startDate: element.dateTime,
                              endDate: element.dateTime.add(const Duration(days: 1)),
...
            builder: (BuildContext context, StateSetter setState) { 
              return Column(
              children: [
                TextField(
                  controller: _eventNamePopUpController,
                  decoration: const InputDecoration(
                    hintText: "e.g. fishing", 
                    labelText: "Event Name"),
                ),
                TextField(
                  controller: _eventDesPopUpController,
                  decoration: const InputDecoration(
                    hintText: "e.g. the quick brown fox jumps over the lazy dog",
...
